Actualizaciones en la sintaxis y en el uso de interfaz de QEMU.

--- a/src/hw/pciemu/meson.build
+++ b/src/hw/pciemu/meson.build
@@ -6,4 +6,4 @@ pciemu_ss.add(files(
     'pciemu.c',
 ))
 
-softmmu_ss.add_all(when: 'CONFIG_PCIEMU', if_true: pciemu_ss)
+system_ss.add_all(when: 'CONFIG_PCIEMU', if_true: pciemu_ss)
