--- a/src/sw/userspace/Makefile
+++ b/src/sw/userspace/Makefile
@@ -12,7 +12,7 @@ build_dir := build/
 include_dir := $(abspath ../../../include/)
 includes := $(addprefix -I, $(include_dir))
 cflags := -Wall -Werror -O2 $(includes)
-targets := pciemu_example
+targets := pciemu_example dma-read dma-write
 
 .PHONY : all
 all: $(targets)
